--- a/GUI Basic Training/Bootstrap/Index.html
+++ b/GUI Basic Training/Bootstrap/Index.html
@@ -95,8 +95,8 @@
                 </div>
             </div>
             <div class="w-50">
-                <div class="section p-2 m-2 bg-dark" style="height: 10vh;">
-                    sdsdsd
+                <div class="section p-2 m-2 bg-dark text-white h1 text-center hor" style="height: 10vh;">
+                    Personal Portfolio Website
                 </div>
                 <div class="d-flex mt-4">
                     <div class="section mx-2" style="background-color: #8325fd; height: 50vh; width: 20vw;">
@@ -116,26 +116,7 @@
                         </div>
                         <div class="section mb-4 mx-2  bg-dark " style="height : 7vh; width: 30vw">
                             <div class="d-flex d-flex-row">
-                                <div class="col-md-3">
-                                    <div class="rounded-circle bg-primary m-1 align-middle p-3">
-                                        <img src="./Assets/wave.png" class="w-50"/>
-                                    </div>
-                                </div>
-                                <div class="col-md-3">
-                                    <div class="rounded-circle bg-primary m-1 align-middle p-3">
-                                        <img src="./Assets/wave.png" class="w-50"/>
-                                    </div>
-                                </div>
-                                <div class="col-md-3">
-                                    <div class="rounded-circle bg-primary m-1 align-middle p-3">
-                                        <img src="./Assets/wave.png" class="w-50"/>
-                                    </div>
-                                </div>
-                                <div class="col-md-3">
-                                    <div class="rounded-circle bg-primary m-1 align-middle p-3">
-                                        <img src="./Assets/wave.png" class="w-50"/>
-                                    </div>
-                                </div>
+                                
                             </div>
                         </div>
                     </div>
@@ -150,14 +131,15 @@
                         <span class="h2 text-secondary">See All</span>
                     </div>
                     <div class="row p-3">
-                        <div class=" section mx-2 bg-secondary" style="height: 100%;width: 30%;">
-                            <img src="./Assets/PlacementPrep.png" style="width: 70%;"/>
+                        <div class=" section mx-2 bg-secondary img-fluid" style="height: 100%;width: 48%;">
+                            <a href="https://placementprep.in/">
+                                <img src="./Assets/PlacementPrep.png" style="width: 100%;"/>
+                            </a>
                         </div>
-                        <div class=" section mx-2 bg-secondary" style="height: 100%;width: 30%;">
-                            <img src="./Assets/wave.png" style="width: 70%;"/>
-                        </div>
-                        <div class=" section mx-2 bg-secondary" style="height: 100%;width: 30%;">
-                            <img src="./Assets/wave.png" style="width: 70%;"/>
+                        <div class=" section mx-2 bg-secondary" style="height: 100%;width: 48%;">
+                            <a href="https://www.thehappyhomedecor.com/">
+                                <img src="./Assets/HappyHomeDecor.png" style="width: 100%;"/>
+                            </a>
                         </div>
                     </div>
                 </div>
@@ -166,7 +148,7 @@
                 <div class="section  bg-dark " style="height:40vh">
                     <div class="row justify-content-around py-3">
                         <span class="h2 text-light">About</span>
-                        <span class="h2 text-secondary">Resume</span>
+                        <span class="h2 text-secondary"><a class="text-secondary" download href="./Assets/Resume-PrinceGoswami.pdf">Resume</a></span>
                     </div>
                     <div class="row justify-content-around">
                         <span class=" text-justify px-4 " style="font-size: 20px; color: #f0f0f0; ">
